<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/titleInstagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/lobster"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="48sp" />
    <EditText
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:hint="@string/username"
        android:textColorHint="#40FFFFFF"
        android:layout_below="@+id/titleInstagram"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="24sp"
        android:background="@drawable/rectangle_shape"
        android:padding="10dp"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:textColorHint="#40FFFFFF"
        android:layout_below="@+id/Username"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="24sp"
        android:inputType="textPassword"
        android:background="@drawable/rectangle_shape"
        android:padding="10dp"
        />
    <Button
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/password"
        android:text="@string/Login"
        android:textSize="24sp"
        android:background="@drawable/button_border"
        app:backgroundTint="@null"
        android:padding="10dp"
        android:textColor="#40FFFFFF"
        />

    <LinearLayout
        android:id="@+id/Forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="20dp">

        <TextView
            android:id="@+id/Forgotyourlogindetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_login_detail"
            android:textColor="@color/white1" />

        <TextView
            android:id="@+id/Gethelpsigningin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_help_signing_in"
            android:textColor="@color/white" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/divider_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Forgot"
        android:gravity="center">

        <View
            android:id="@+id/divider_left"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:background="@color/white1" />

        <TextView
            android:id="@+id/Or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/or"
            android:textColor="@color/white" />

        <View
            android:id="@+id/divider_right"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:background="@color/white1" />

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/divider_layout"
    android:gravity="center"
    android:layout_marginBottom="60dp">
    <ImageView
        android:id="@+id/logofacebook"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:src="@drawable/facebook"/>

    <TextView
        android:id="@+id/LoginWithFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/log_in_with_facebook"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"/>
</LinearLayout>


    <LinearLayout
        android:id="@+id/signup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectangle_shape"
        android:gravity="center"
        android:padding="20dp">
        <TextView
            android:id="@+id/Donthaveanaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/white1"
            />

        <TextView
            android:id="@+id/Signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"/>

    </LinearLayout>


</RelativeLayout>